initial setup pages and routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metronic-react-starter-kit",
+  "name": "lakepedia-dashboard",
   "private": true,
   "version": "9.2.7",
   "type": "module",
