--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ VITE_APP_NAME=metronic-react-vite-starter-kit
 VITE_APP_VERSION=9.2.6
 
 VITE_API_BASE_URL=http://192.168.15.209:8000/api
+
+VITE_AUTH0_CLIENT_ID=7aaoMCoIbeltEkMTIPQ7qDwTDnz0cvkv
+
+VITE_AUTH0_DOMAIN=dev-070nqkei8yu7p1nq.us.auth0.com
+
+VITE_AUTH0_AUDIENCE=http://localhost:5173
+
