--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug-auth": "tsx scripts/debug-auth.js"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.5.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
