--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 VITE_APP_NAME=metronic-react-vite-starter-kit
 VITE_APP_VERSION=9.2.6
 
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=http://192.168.15.123:8000/api
 
-# VITE_AUTH0_CLIENT_ID=7aaoMCoIbeltEkMTIPQ7qDwTDnz0cvkv
+VITE_AUTH0_CLIENT_ID=7aaoMCoIbeltEkMTIPQ7qDwTDnz0cvkv
 
-# VITE_AUTH0_DOMAIN=dev-070nqkei8yu7p1nq.us.auth0.com
+VITE_AUTH0_DOMAIN=dev-070nqkei8yu7p1nq.us.auth0.com
 
-VITE_AUTH0_CLIENT_ID=9sboUvljXtsdIoGXyFx3Tub0SmvKq2WZ
+# VITE_AUTH0_CLIENT_ID=9sboUvljXtsdIoGXyFx3Tub0SmvKq2WZ
 
-VITE_AUTH0_DOMAIN=dev-8td6we3uff4llwvz.us.auth0.com
+# VITE_AUTH0_DOMAIN=dev-8td6we3uff4llwvz.us.auth0.com
 
 VITE_AUTH0_AUDIENCE=http://localhost:5173
 
