--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-aria-components": "^1.11.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.62.0",
