--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ VITE_APP_NAME=metronic-react-vite-starter-kit
 VITE_APP_VERSION=9.2.6
 
 VITE_API_BASE_URL=http://192.168.15.17:8000/api
+# VITE_API_BASE_URL=http://localhost:8000/api
 
 VITE_AUTH0_CLIENT_ID=7aaoMCoIbeltEkMTIPQ7qDwTDnz0cvkv
 
