--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "vite.config.js",
+      "src": "dist/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/dist/index.html"
     }
   ]
 }
