--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@headless-tree/core": "^1.4.0",
     "@headless-tree/react": "^1.4.0",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.9.0",
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.12",
@@ -31,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.541.0",
