complete crud api of  itinerary in trip section

--- a/.env
+++ b/.env
@@ -15,6 +15,6 @@ VITE_AUTH0_DOMAIN=dev-070nqkei8yu7p1nq.us.auth0.com
 VITE_AUTH0_AUDIENCE=http://localhost:5173
 
 
-VITE_AUTH_REDIRECT_URI=https://admin.lakepedia.com/auth/callback
-# VITE_AUTH_REDIRECT_URI=http://localhost:5173/auth/callback
+# VITE_AUTH_REDIRECT_URI=https://admin.lakepedia.com/auth/callback
+VITE_AUTH_REDIRECT_URI=http://localhost:5173/auth/callback
 
